src/serai/hrf/header.h

#define LANGUAGE_ENGLISH 1
#define LANGUAGE_CHINESE_SIMPLIFIED 2
#define LANGUAGE_CHINESE_TRADITIONAL 3
#define LANGUAGE_FRENCH 4
#define LANGUAGE_ITALIAN 5
#define LANGUAGE_JAPANESE 6
#define LANGUAGE_KOREAN 7
#define LANGUAGE_SPANISH 8
#define UNKNOWN_ERROR 21
#define INVALID_ENCODING_ERROR 22
#define INVALID_PARTICIPANT_ERROR 23
#define INVALID_SHARE_ERROR 24
#define ZERO_PARAMETER_ERROR 41
#define INVALID_THRESHOLD_ERROR 42
#define INVALID_NAME_ERROR 43
#define UNKNOWN_LANGUAGE_ERROR 44
#define INVALID_SEED_ERROR 45
#define INVALID_AMOUNT_OF_COMMITMENTS_ERROR 46
#define INVALID_COMMITMENTS_ERROR 47
#define INVALID_AMOUNT_OF_SHARES_ERROR 48
#define INVALID_OUTPUT_ERROR 61
#define INVALID_ADDRESS_ERROR 62
#define INVALID_NETWORK_ERROR 63
#define NO_INPUTS_ERROR 64
#define NO_OUTPUTS_ERROR 65
#define DUST_ERROR 66
#define NOT_ENOUGH_FUNDS_ERROR 67
#define TOO_LARGE_TRANSACTION_ERROR 68
#define WRONG_KEYS_ERROR 69
#define INVALID_PREPROCESS_ERROR 70
#define FEE_ERROR 71
#define INVALID_DERIVATION_ERROR 72
#define INVALID_PARTICIPANTS_AMOUNT_ERROR 81
#define DUPLICATED_PARTICIPANT_ERROR 82
#define NOT_ENOUGH_RESHARERS_ERROR 83
#define INVALID_RESHARED_MSG_ERROR 84
#define INVALID_RESHARER_MSG_ERROR 85
typedef enum Network {
  Mainnet,
  Testnet,
  Regtest,
} Network;
typedef struct KeyMachineWrapper KeyMachineWrapper;
typedef struct MultisigConfig MultisigConfig;
typedef struct OpaqueResharedMachine OpaqueResharedMachine;
typedef struct OpaqueResharingMachine OpaqueResharingMachine;
typedef struct OwnedPortableOutput OwnedPortableOutput;
typedef struct ResharerConfig ResharerConfig;
typedef struct SecretShareMachineWrapper SecretShareMachineWrapper;
typedef struct SignConfig SignConfig;
typedef struct RustString RustString;
typedef struct ThresholdKeysWrapper ThresholdKeysWrapper;
typedef struct TransactionSignMachineWrapper TransactionSignMachineWrapper;
typedef struct TransactionSignatureMachineWrapper TransactionSignatureMachineWrapper;
typedef struct Vec_u8 Vec_u8;
typedef struct OwnedString {
  struct RustString *str_box;
  const uint8_t *ptr;
  uintptr_t len;
} OwnedString;
typedef struct StringView {
  const uint8_t *ptr;
  uintptr_t len;
} StringView;
typedef struct MultisigConfigWithName {
  struct MultisigConfig *config;
  struct RustString *my_name;
} MultisigConfigWithName;
typedef struct MultisigConfigRes {
  struct MultisigConfig *config;
  struct OwnedString encoded;
} MultisigConfigRes;
typedef struct CResult_MultisigConfigRes {
  struct MultisigConfigRes *value;
  uint8_t err;
} CResult_MultisigConfigRes;
typedef struct CResult_MultisigConfig {
  struct MultisigConfig *value;
  uint8_t err;
} CResult_MultisigConfig;
typedef struct StartKeyGenRes {
  struct OwnedString seed;
  struct MultisigConfigWithName *config;
  struct SecretShareMachineWrapper *machine;
  struct OwnedString commitments;
} StartKeyGenRes;
typedef struct CResult_StartKeyGenRes {
  struct StartKeyGenRes *value;
  uint8_t err;
} CResult_StartKeyGenRes;
typedef struct SecretSharesRes {
  struct KeyMachineWrapper *machine;
  struct Vec_u8 *internal_commitments;
  struct OwnedString shares;
} SecretSharesRes;
typedef struct CResult_SecretSharesRes {
  struct SecretSharesRes *value;
  uint8_t err;
} CResult_SecretSharesRes;
typedef struct KeyGenRes {
  uint8_t multisig_id[32];
  struct ThresholdKeysWrapper *keys;
  struct OwnedString recovery;
} KeyGenRes;
typedef struct CResult_ThresholdKeysWrapper {
  struct ThresholdKeysWrapper *value;
  uint8_t err;
} CResult_ThresholdKeysWrapper;
typedef struct CResult_OwnedString {
  struct OwnedString *value;
  uint8_t err;
} CResult_OwnedString;
typedef struct SignConfigRes {
  struct SignConfig *config;
  struct OwnedString encoded;
} SignConfigRes;
typedef struct CResult_SignConfigRes {
  struct SignConfigRes *value;
  uint8_t err;
} CResult_SignConfigRes;
typedef struct PortableOutput {
  uint8_t hash[32];
  uint32_t vout;
  uint64_t value;
  const uint8_t *script_pubkey;
  uintptr_t script_pubkey_len;
  uint32_t account;
  uint32_t address;
  bool change;
  bool secure;
} PortableOutput;
typedef struct CResult_SignConfig {
  struct SignConfig *value;
  uint8_t err;
} CResult_SignConfig;
typedef struct ContinueSignRes {
  struct TransactionSignatureMachineWrapper *machine;
  struct OwnedString preprocess;
} ContinueSignRes;
typedef struct ResharerConfigRes {
  struct ResharerConfig *config;
  struct OwnedString encoded;
} ResharerConfigRes;
typedef struct CResult_ResharerConfigRes {
  struct ResharerConfigRes *value;
  uint8_t err;
} CResult_ResharerConfigRes;
typedef struct CResult_ResharerConfig {
  struct ResharerConfig *value;
  uint8_t err;
} CResult_ResharerConfig;
typedef struct StartResharerRes {
  uintptr_t new_participants_len;
  struct OpaqueResharingMachine *machine;
  struct OwnedString encoded;
} StartResharerRes;
typedef struct CResult_StartResharerRes {
  struct StartResharerRes *value;
  uint8_t err;
} CResult_StartResharerRes;
typedef struct StartResharedRes {
  uintptr_t resharers_len;
  struct MultisigConfig *multisig_config;
  uint16_t my_i;
  struct OpaqueResharedMachine *machine;
  struct OwnedString encoded;
} StartResharedRes;
typedef struct CResult_StartResharedRes {
  struct StartResharedRes *value;
  uint8_t err;
} CResult_StartResharedRes;
typedef struct ResharedRes {
  struct MultisigConfig *config;
  struct OwnedString id;
  struct ThresholdKeysWrapper *keys;
} ResharedRes;
typedef struct CResult_ResharedRes {
  struct ResharedRes *value;
  uint8_t err;
} CResult_ResharedRes;
const struct MultisigConfig *multisig_config(const struct MultisigConfigWithName *self);