lib/frostdart_bindings_generated.dart


final class CResult_MultisigConfig extends ffi.Struct {
  external ffi.Pointer<MultisigConfig> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_MultisigConfig> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<MultisigConfig> value,
    required int err,
  }) => $allocator<CResult_MultisigConfig>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_MultisigConfigRes extends ffi.Struct {
  external ffi.Pointer<MultisigConfigRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_MultisigConfigRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<MultisigConfigRes> value,
    required int err,
  }) => $allocator<CResult_MultisigConfigRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_OwnedString extends ffi.Struct {
  external ffi.Pointer<OwnedString> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_OwnedString> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<OwnedString> value,
    required int err,
  }) => $allocator<CResult_OwnedString>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_ResharedRes extends ffi.Struct {
  external ffi.Pointer<ResharedRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_ResharedRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ResharedRes> value,
    required int err,
  }) => $allocator<CResult_ResharedRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_ResharerConfig extends ffi.Struct {
  external ffi.Pointer<ResharerConfig> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_ResharerConfig> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ResharerConfig> value,
    required int err,
  }) => $allocator<CResult_ResharerConfig>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_ResharerConfigRes extends ffi.Struct {
  external ffi.Pointer<ResharerConfigRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_ResharerConfigRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ResharerConfigRes> value,
    required int err,
  }) => $allocator<CResult_ResharerConfigRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_SecretSharesRes extends ffi.Struct {
  external ffi.Pointer<SecretSharesRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_SecretSharesRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<SecretSharesRes> value,
    required int err,
  }) => $allocator<CResult_SecretSharesRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_SignConfig extends ffi.Struct {
  external ffi.Pointer<SignConfig> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_SignConfig> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<SignConfig> value,
    required int err,
  }) => $allocator<CResult_SignConfig>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_SignConfigRes extends ffi.Struct {
  external ffi.Pointer<SignConfigRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_SignConfigRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<SignConfigRes> value,
    required int err,
  }) => $allocator<CResult_SignConfigRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_StartKeyGenRes extends ffi.Struct {
  external ffi.Pointer<StartKeyGenRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_StartKeyGenRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<StartKeyGenRes> value,
    required int err,
  }) => $allocator<CResult_StartKeyGenRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_StartResharedRes extends ffi.Struct {
  external ffi.Pointer<StartResharedRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_StartResharedRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<StartResharedRes> value,
    required int err,
  }) => $allocator<CResult_StartResharedRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_StartResharerRes extends ffi.Struct {
  external ffi.Pointer<StartResharerRes> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_StartResharerRes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<StartResharerRes> value,
    required int err,
  }) => $allocator<CResult_StartResharerRes>()
    ..ref.value = value
    ..ref.err = err;
}

final class CResult_ThresholdKeysWrapper extends ffi.Struct {
  external ffi.Pointer<ThresholdKeysWrapper> value;

  @ffi.Uint8()
  external int err;

  static ffi.Pointer<CResult_ThresholdKeysWrapper> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ThresholdKeysWrapper> value,
    required int err,
  }) => $allocator<CResult_ThresholdKeysWrapper>()
    ..ref.value = value
    ..ref.err = err;
}

final class ContinueSignRes extends ffi.Struct {
  external ffi.Pointer<TransactionSignatureMachineWrapper> machine;

  external OwnedString preprocess;
}

const int DUPLICATED_PARTICIPANT_ERROR = 82;

const int DUST_ERROR = 66;

const int FEE_ERROR = 71;

const int INVALID_ADDRESS_ERROR = 62;

const int INVALID_AMOUNT_OF_COMMITMENTS_ERROR = 46;

const int INVALID_AMOUNT_OF_SHARES_ERROR = 48;

const int INVALID_COMMITMENTS_ERROR = 47;

const int INVALID_DERIVATION_ERROR = 72;

const int INVALID_ENCODING_ERROR = 22;

const int INVALID_NAME_ERROR = 43;

const int INVALID_NETWORK_ERROR = 63;

const int INVALID_OUTPUT_ERROR = 61;

const int INVALID_PARTICIPANTS_AMOUNT_ERROR = 81;

const int INVALID_PARTICIPANT_ERROR = 23;

const int INVALID_PREPROCESS_ERROR = 70;

const int INVALID_RESHARED_MSG_ERROR = 84;

const int INVALID_RESHARER_MSG_ERROR = 85;

const int INVALID_SEED_ERROR = 45;

const int INVALID_SHARE_ERROR = 24;

const int INVALID_THRESHOLD_ERROR = 42;

final class KeyGenRes extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> multisig_id;

  external ffi.Pointer<ThresholdKeysWrapper> keys;

  external OwnedString recovery;
}

final class KeyMachineWrapper extends ffi.Opaque {}

const int LANGUAGE_CHINESE_SIMPLIFIED = 2;

const int LANGUAGE_CHINESE_TRADITIONAL = 3;

const int LANGUAGE_ENGLISH = 1;

const int LANGUAGE_FRENCH = 4;

const int LANGUAGE_ITALIAN = 5;

const int LANGUAGE_JAPANESE = 6;

const int LANGUAGE_KOREAN = 7;

const int LANGUAGE_SPANISH = 8;

final class MultisigConfig extends ffi.Opaque {}

final class MultisigConfigRes extends ffi.Struct {
  external ffi.Pointer<MultisigConfig> config;

  external OwnedString encoded;
}

final class MultisigConfigWithName extends ffi.Struct {
  external ffi.Pointer<MultisigConfig> config;

  external ffi.Pointer<RustString> my_name;

  static ffi.Pointer<MultisigConfigWithName> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<MultisigConfig> config,
    required ffi.Pointer<RustString> my_name,
  }) => $allocator<MultisigConfigWithName>()
    ..ref.config = config
    ..ref.my_name = my_name;
}

const int NOT_ENOUGH_FUNDS_ERROR = 67;

const int NOT_ENOUGH_RESHARERS_ERROR = 83;

const int NO_INPUTS_ERROR = 64;

const int NO_OUTPUTS_ERROR = 65;

sealed class Network {
  static const Mainnet = 0;
  static const Testnet = 1;
  static const Regtest = 2;
}

final class OpaqueResharedMachine extends ffi.Opaque {}

final class OpaqueResharingMachine extends ffi.Opaque {}

final class OwnedPortableOutput extends ffi.Opaque {}

final class OwnedString extends ffi.Struct {
  external ffi.Pointer<RustString> str_box;

  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.UintPtr()
  external int len;

  static ffi.Pointer<OwnedString> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<RustString> str_box,
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
  }) => $allocator<OwnedString>()
    ..ref.str_box = str_box
    ..ref.ptr = ptr
    ..ref.len = len;
}

final class PortableOutput extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> hash;

  @ffi.Uint32()
  external int vout;

  @ffi.Uint64()
  external int value;

  external ffi.Pointer<ffi.Uint8> script_pubkey;

  @ffi.UintPtr()
  external int script_pubkey_len;

  @ffi.Uint32()
  external int account;

  @ffi.Uint32()
  external int address;

  @ffi.Bool()
  external bool change;

  @ffi.Bool()
  external bool secure;
}

final class ResharedRes extends ffi.Struct {
  external ffi.Pointer<MultisigConfig> config;

  external OwnedString id;

  external ffi.Pointer<ThresholdKeysWrapper> keys;
}

final class ResharerConfig extends ffi.Opaque {}

final class ResharerConfigRes extends ffi.Struct {
  external ffi.Pointer<ResharerConfig> config;

  external OwnedString encoded;
}

final class RustString extends ffi.Opaque {}

final class SecretShareMachineWrapper extends ffi.Opaque {}

final class SecretSharesRes extends ffi.Struct {
  external ffi.Pointer<KeyMachineWrapper> machine;

  external ffi.Pointer<Vec_u8> internal_commitments;

  external OwnedString shares;
}

final class SignConfig extends ffi.Opaque {}

final class SignConfigRes extends ffi.Struct {
  external ffi.Pointer<SignConfig> config;

  external OwnedString encoded;
}

final class StartKeyGenRes extends ffi.Struct {
  external OwnedString seed;

  external ffi.Pointer<MultisigConfigWithName> config;

  external ffi.Pointer<SecretShareMachineWrapper> machine;

  external OwnedString commitments;
}

final class StartResharedRes extends ffi.Struct {
  @ffi.UintPtr()
  external int resharers_len;

  external ffi.Pointer<MultisigConfig> multisig_config$1;

  @ffi.Uint16()
  external int my_i;

  external ffi.Pointer<OpaqueResharedMachine> machine;

  external OwnedString encoded;
}

final class StartResharerRes extends ffi.Struct {
  @ffi.UintPtr()
  external int new_participants_len;

  external ffi.Pointer<OpaqueResharingMachine> machine;

  external OwnedString encoded;
}

final class StringView extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.UintPtr()
  external int len;

  static ffi.Pointer<StringView> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
  }) => $allocator<StringView>()
    ..ref.ptr = ptr
    ..ref.len = len;
}

const int TOO_LARGE_TRANSACTION_ERROR = 68;

final class ThresholdKeysWrapper extends ffi.Opaque {}

final class TransactionSignMachineWrapper extends ffi.Opaque {}

final class TransactionSignatureMachineWrapper extends ffi.Opaque {}

const int UNKNOWN_ERROR = 21;

const int UNKNOWN_LANGUAGE_ERROR = 44;

final class Vec_u8 extends ffi.Opaque {}

const int WRONG_KEYS_ERROR = 69;

const int ZERO_PARAMETER_ERROR = 41;
